Alpha 7.0.4

- Furniture placements on top of irrigation channels no longer show as valid

Alpha 7.0.3 - 28th September 2021

- Settlers will now collect water from wells to transfer to other containers (such as a water barrel)
- Corrected labelling of soup with 3 ingredients
- Added missing translation labels
- Fix for a crash when trying to get into a bed which has been removed

Alpha 7.0.2 - 26th September 2021

- Fix for a crash related to late-growing Hemp
- Fix for a crash when sleeping in bed but the bed no longer exists
- Increased opacity of sleeping spot

Alpha 7.0.1 - 25th September 2021

- Fix for a crash when cancelling unneeded jobs

Alpha 7 - 25th September 2021

- Added channels and piping for liquid flow between tiles
- Added water pump furniture to extract liquid from river and pump into pipes
- Added well furniture for usage of pumped water
- Added power generating furniture - windmill and water wheel
- Added mechanical power grid system for transfer of power between producers and consumers (such as windmill and water pump)
- Plants now require water to grow, which can be provided by rain or nearby irrigation channels containing water
- Ore crusher now requires power to operate, or else it will take significantly longer
- Added hemp crop, which requires processing in a retting station and then it can be crafted into rope or linen
    - Note that weaving is currently done by farmers, before a dedicated weaving profession will probably be added later
- Beds now require linen to be constructed
- Added sleeping spot to bedrooms to make up for more difficult bed requirements
- Added fishing mechanic/jobs and re-implemented the fisher profession
- Fish can be caught, prepared, and used in cooking soup
- Fixed particle effects on furniture in use like Ore Crusher
- Made settlers eat rations before other edible items in inventory
- Made lightning very unlikely to strike plants other than trees