@@ -17,7 +17,7 @@ allprojects {
     apply plugin: "eclipse"
     apply plugin: "idea"
 
-    version = 'Alpha 7.0.3'
+    version = 'Alpha 7.0.4'
     ext {
         appName = 'undermount'
         gdxVersion = '1.9.10'
