@@ -1,6 +1,8 @@
-Alpha 7.0.4
+Alpha 7.0.4 - 28th September 2021
 
 - Furniture placements on top of irrigation channels no longer show as valid
+- Fix for an issue with liquid transfers affecting save files fro Alpha 7.0.2 and below being used in Alpha 7.0.3
+- Made liquid containers with a very small amount of liquid count as empty
 
 Alpha 7.0.3 - 28th September 2021
 
